networking/03-internet_gateway.tf
resource "aws_internet_gateway" "main_igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name        = "course_igw"
    Environment = "Learning"
  }
}
